# mailwyrm

./: .gitignore  AGENTS.md  README.md  pyproject.toml
codex/: bookwyrm-mail-realignment-prompt.md
docs/: ai-behavior.md  app-shell.md  architecture.md  automation-policy.md  bookwyrm-mail-icon.md  bookwyrm-mail-realignment.md  classification-corrections.md  daily-preview.md  digest-preview.md  foundation-conformance.md  gmail-history-reconciliation.md  gmail-label-application.md  gmail-label-setup.md  gmail-readonly-sync.md  local-classification.md  mailbox-action-preview.md  message-body-sync.md  product-brief.md  sync-mailbox-selection.md  todo.md
docs/decisions/: 0001-gmail-is-source-of-truth.md
src/mailwyrm/: __init__.py  __main__.py  actions.py  app.py  classifier.py  cli.py  cockpit.py  config.py  corrections.py  daily.py  digest.py  followups.py  gmail.py  labels.py  models.py  oauth.py  policy.py  store.py  sync.py
src/mailwyrm/static/: app.css  app.js  index.html
tests/: test_actions.py  test_app.py  test_classifier.py  test_cli.py  test_cockpit.py  test_corrections.py  test_daily.py  test_digest.py  test_followups.py  test_gmail.py  test_labels.py  test_models.py  test_policy.py  test_store.py  test_sync.py  test_sync_mailbox.py
