[project]
name = "mailwyrm"
version = "0.1.0"
description = "AI-first Gmail client that protects human attention."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mailwyrm = "mailwyrm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mailwyrm"]
